@@ -1,6 +1,13 @@
 Changes since version 1.5.1
 ---------------------------
 
+- Fixed the slice2java and slice2cs compilers for operations with multiple
+  exceptions in an exception specification: if an exception was a base of one or
+  more other exceptions in the same exception specification, the code
+  generator sometimes emitted the catch blocks in the marshaling and
+  dispatch code in the wrong order. (This applied only to interfaces
+  with an ["amd"] metadata directive.)
+
 - Fixed a bug in the slice2cs code generator:
   
   ["cs:collection"] sequence<Object> S1;
